--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@aws-sdk/client-s3": "^3.884.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
     "@react-pdf/renderer": "^4.3.0",
