feat(debts): add debt detail page with payments list and link from index; chore(ci): add CI (pnpm install + type-check + lint); add type-check script

--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:seed": "node prisma/seed.mjs",
-    "test": "vitest"
+    "test": "vitest",
+    "type-check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
