feat: thermal invoice redesign, payment method handling, bilingual layout; add edit/delete order actions; backup delete+restore APIs; await params fixes; settings improvements

--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
     "test:unit": "vitest --run",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
-    "lint": "eslint",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --ignore-pattern next-env.d.ts --ignore-pattern src/generated/**",
     "prisma": "prisma",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -44,10 +44,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
