تحسين تجربة صفحة تسجيل الدخول

--- a/app/.env.example
+++ b/app/.env.example
@@ -7,6 +7,10 @@ LOGIN_MAX_ATTEMPTS=5
 # Lock duration in minutes after too many failed attempts
 LOGIN_LOCK_MINUTES=15
 
+# Session length in seconds (default vs. remember-me)
+LOGIN_DEFAULT_MAX_AGE_SECONDS=86400
+LOGIN_REMEMBER_MAX_AGE_SECONDS=2592000
+
 # Google reCAPTCHA v2 (checkbox) test keys for development
 # Replace with production keys from Google reCAPTCHA admin console before deploying
 RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
